added greeting api
